--- a/MauiApp1/Pages/Counter.razor
+++ b/MauiApp1/Pages/Counter.razor
@@ -1,5 +1,46 @@
 ﻿@page "/counter"
 
+<div class="row">
+  <div class="column">
+    <div class="card">
+      <img src="images/img1.jpg" alt="Jane" style="width:100%">
+      <div class="container">
+        <h2>Patrick Ferguson</h2>
+        <p class="title">CEO &amp; Founder</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>example@firstgenstudios.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="images/img2.jpg" alt="Mike" style="width:100%">
+      <div class="container">
+        <h2>Evan Fitzgerald</h2>
+        <p class="title">Art Director</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>example@firstgenstudios.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <img src="images/img3.jpg" alt="John" style="width:100%">
+      <div class="container">
+        <h2>John Doe</h2>
+        <p class="title">Designer</p>
+        <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+        <p>example@firstgenstudios.com</p>
+        <p><button class="button">Contact</button></p>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-4"></div>
